# windows-botify

./: LICENSE  README.md  Rectangle.py  pyproject.toml  setup.py  window.py
.github/workflows/: python-publish.yml
windows_botify/: __init__.py  mouse.py  rectangle.py  setup.py  window.py  window_api.py
