[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "windows_botify"
version = "0.0.4"
authors = [
  { name="cavecake", email="cavecake@web.de" },
]
description = 'A simple libary to control windows'
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Cavecake/windows-botify"
Issues = "https://github.com/Cavecake/windows-botify/issues"